force-app/main/default/objects/Homelessness_Map__mdt/Homelessness_Map__mdt.object-meta.xml
<CustomObject>
    <label>Homelessness Map</label>
    <pluralLabel>Homelessness Maps</pluralLabel>
</CustomObject>