force-app/main/default/objects/Homelessness_Map__mdt/fields/Building_Full_Occupied_Color__c.field-meta.xml
<CustomField>
    <fullName>Building_Full_Occupied_Color__c</fullName>
    <defaultValue>&apos;rgb(255, 0, 0)&apos;</defaultValue>
    <label>Building Full Occupied Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>