force-app/main/default/objects/Homelessness_Map__mdt/fields/Building_Halfway_Filled_Color__c.field-meta.xml
<CustomField>
    <fullName>Building_Halfway_Filled_Color__c</fullName>
    <defaultValue>&apos;rgb(255, 255, 0)&apos;</defaultValue>
    <label>Building Halfway Filled Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>