force-app/main/default/objects/Homelessness_Map__mdt/fields/Building_Vacant_Color__c.field-meta.xml
<CustomField>
    <fullName>Building_Vacant_Color__c</fullName>
    <defaultValue>&apos;rgb(0, 255, 0)&apos;</defaultValue>
    <label>Building Vacant Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>